<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="kalmanInit" Id="{d7251438-6fe8-487a-a0f8-758520c23014}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK kalmanInit
VAR_INPUT
END_VAR
VAR_OUTPUT
END_VAR
VAR
	tmp0:ARRAY[0..2,0..2] OF LREAL;
	Ft:ARRAY[0..2,0..2] OF LREAL;
	tmp:ARRAY[0..2] OF LREAL;
	tmp1:ARRAY[0..2,0..2] OF LREAL;
	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[  
  P_kalman1_M(Data:=P_kalman1);
  Q_kalman1_M(Data:=Q_kalman1);
  R_kalman1_M(Data:=R_kalman1);
  F_kalman1_M(Data:=F_kalman1);
  K_kalman1_M(Data:=K_kalman1);
  H_kalman1_M(Data:=H_kalman1);
  x_kalman1_m(Data:=x_kalman1);
  P_kalman2_M(Data:=P_kalman2);
  Q_kalman2_M(Data:=Q_kalman2);
  R_kalman2_M(Data:=R_kalman2);
  F_kalman2_M(Data:=F_kalman2);
  K_kalman2_M(Data:=K_kalman2);
  H_kalman2_M(Data:=H_kalman2);
  Matrix_Product(F_kalman1_M,x_kalman1,tmp);
  Matrix_Product(Dynamicmatrix.InitIdentity(3),tmp,x_kalman1);
  x_kalman2[0]:=(-robotdata.qr_angle * 0.1-PF_OFFSET);
  Matrix_Product(F_kalman1_M, P_kalman1_M ,tmp0);
  Matrix_Transpose(F_kalman1_M,Ft);
  Matrix_Product(tmp0, Ft, P_kalman1_M);
  P_kalman1_M.ElementSum(Q_kalman1_M);
 

  Matrix_Product(F_kalman2_M,x_kalman2,tmp);
  Matrix_Product(Dynamicmatrix.InitIdentity(3),tmp,x_kalman2);

  Matrix_Product(F_kalman2_M, P_kalman2_M ,tmp0);
  Matrix_Transpose(F_kalman2_M,Ft);
  Matrix_Product(tmp0, Ft, P_kalman2_M);
  P_kalman2_M.ElementSum(Q_kalman2_M);

  F_kalman3[0][2]:= -1*x_kalman1[0]*COS(x_kalman2[0]*PI/180)*PLC_CYCLE;
  F_kalman3[1][2]:= -1*x_kalman1[0]*SIN(x_kalman2[0]*PI/180)*PLC_CYCLE;
  
  x_kalman3[0]:=robotdata.robot_x+x_kalman1[0]*COS(x_kalman2[0]*PI/180)*PLC_CYCLE;
  x_kalman3[1]:=robotdata.robot_y+x_kalman1[0]*SIN(x_kalman2[0]*PI/180)*PLC_CYCLE;
  x_kalman3[2]:=(-robotdata.qr_angle * 0.1-PF_OFFSET)+x_kalman2[1]*PLC_CYCLE;

  P_kalman3_M(Data:=P_kalman3);
  Q_kalman3_M(Data:=Q_kalman3);
  R_kalman3_M(Data:=R_kalman3);
  F_kalman3_M(Data:=F_kalman3);
  K_kalman3_M(Data:=K_kalman3);
  H_kalman3_M(Data:=H_kalman3);
 
  //P_kalman3 = Fk_kalman3*P_kalman3*Fk_kalman3'+Q_kalman3;
  Matrix_Transpose(F_kalman3_M,Ft);
  Matrix_Product(F_kalman3_M,P_kalman3_M,tmp0);//tmp0=k_kalman3*P_kalman3
  Matrix_Product(tmp0,Ft,P_kalman3_M);//P_kalman3=tmp0*Fk_kalman3
  P_kalman3_M.ElementSum(Q_kalman3_M);//P_kalman3=tmp0*Fk_kalman3+Q_kalman3
  
  kalman12_x :=robotdata.robot_x;
  kalman12_y := robotdata.robot_y;]]></ST>
    </Implementation>
    <LineIds Name="kalmanInit">
      <LineId Id="14" Count="0" />
      <LineId Id="55" Count="2" />
      <LineId Id="15" Count="0" />
      <LineId Id="58" Count="0" />
      <LineId Id="16" Count="0" />
      <LineId Id="61" Count="0" />
      <LineId Id="75" Count="0" />
      <LineId Id="67" Count="0" />
      <LineId Id="63" Count="2" />
      <LineId Id="59" Count="1" />
      <LineId Id="17" Count="4" />
      <LineId Id="52" Count="0" />
      <LineId Id="22" Count="15" />
      <LineId Id="77" Count="0" />
      <LineId Id="68" Count="0" />
      <LineId Id="73" Count="0" />
      <LineId Id="69" Count="3" />
      <LineId Id="38" Count="7" />
      <LineId Id="9" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>