<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="setIdealAngle" Id="{8ff8015a-e5b6-42f0-bd2c-8ca1de2f1647}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION setIdealAngle:bool
VAR_INPUT
END_VAR
VAR_OUTPUT
END_VAR
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[  IF (missionCompleted=1 OR  readyFlag=1)THEN
   // IF(( x_kalman3[2,0] <= 20 AND x_kalman3[2,0] >= 0) OR ( x_kalman3[2,0]<0 AND x_kalman3[2,0] >= -20)) THEN idealAngle := 0;
    IF(( x_kalman3[2,0] >= 70 AND x_kalman3[2,0] <= 110) OR (( x_kalman3[2,0] >= -290 AND x_kalman3[2,0] <= -250))) THEN 
		idealAngle := 90;
		robotdata.robot_direction := 3;
    ELSIF(( x_kalman3[2,0] <= -70 AND x_kalman3[2,0] >= -110))THEN  
	idealAngle:= -90;
	robotdata.robot_direction := 1;
    ELSIF (( x_kalman3[2,0] >= 160 AND x_kalman3[2,0] <= 200) OR ( x_kalman3[2,0] < -160 AND x_kalman3[2,0] >= -200)) THEN  
	idealAngle := -180;
	robotdata.robot_direction := 2;
	ELSE
	idealAngle:=0;	
	robotdata.robot_direction := 0;
	END_IF
    IF (readyFlag=1) THEN 
		readyFlag := 0;
		
	END_IF
  END_IF
  stabilization_yaw_deg:=detectStabilizedAngle(current_yaw:=robotdata.qr_yaw*180/PI);
  setIdealAngle:=true;]]></ST>
    </Implementation>
    <LineIds Name="setIdealAngle">
      <LineId Id="10" Count="2" />
      <LineId Id="44" Count="1" />
      <LineId Id="13" Count="0" />
      <LineId Id="46" Count="1" />
      <LineId Id="14" Count="0" />
      <LineId Id="48" Count="1" />
      <LineId Id="35" Count="1" />
      <LineId Id="50" Count="0" />
      <LineId Id="15" Count="1" />
      <LineId Id="19" Count="0" />
      <LineId Id="17" Count="1" />
      <LineId Id="9" Count="0" />
      <LineId Id="55" Count="0" />
      <LineId Id="27" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>